public/styles/site/partials/_preview.scss
.preview{
  margin: 0 0 30px 0;
  .preview-wrapper {
    color: white;
    position: relative;
    height: 100%;
    border-radius: 5px;
    overflow: hidden;
    &:before {
      content: '';
      float: left;
      display: block;
      padding-top: 100%;
    }
    a.swipebox {
      cursor: hover;
    }
    .preview-img {
      position: absolute;
      margin: 0 50%;
      transform: translate(-50%, 0);
      height: 100%;
      min-width: 100%;
      vertical-align: top;
    }
    .overlay {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      background: rgba(#eba352, 0.6);
      &:after {
        z-index: 0;
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        width: 0;
        height: 0;
        border-style: solid;
        border-width: 240px 240px 0 0;
        border-color: rgba(#eba352, 0.6) transparent transparent transparent;
      }
      .overlay-content {
        z-index: 1;
        padding: 20px 15px 15px;
        width: 100%;
        height: 100%;
        position: relative;
        .title {
          width: 80%;
          margin: 0;
        }
        .date {
          font-size: 0.75em;
        }
        .icon {
          margin: 20px 0 0 0;
          font-size: 2.5em;
          .age-icon {
            white-space: nowrap;
            font-size: 0.5em;
            display: flex;
            align-items: center;
            justify-content: center;
            width: 2.5em;
            height: 2.5em;
            background: white;
            color: $clr-blue;
            border-radius: 50%;
          }
        }
        .active-since {
          color: #aaa;
          display: block;
          margin-top: 2em;
          font-weight: bold;
        }
        .button-wrapper {
          z-index: 3;
          position: absolute;
          left: 50%;
          opacity: 0;
          bottom: 15px;
          transition: all 0.5s ease;
          transform: translateX(-50%);
          text-align: center;
          .fa {
            margin: 0 15px 0 0;
          }
        }
        &:hover .button-wrapper {
          opacity: 1;
        }
      }
    }
    &.blue {
      .overlay {
        background: rgba($clr-blue, 0.6);
        &:after {
          border-color: rgba($clr-blue, 0.6) transparent transparent transparent;
        }
      }
    }
    &.inactive {
      .overlay {
        background: rgba(#333, 0.8);
        &:after {
          border-color: rgba(#333, 0.8) transparent transparent transparent;
        }
      }
    }
  }
}

@media (max-width: $screen-xs) {
  .preview {
    min-width: 300px;
    margin-left: auto;
    margin-right: auto;
    position: relative;
    transform: translateX(-50%);
    left: 50%;
  }
}

